--- a/index.html
+++ b/index.html
@@ -304,6 +304,12 @@ Y ahora entiendo todo entiendo por qué coincidimos tantas veces, por qué la vi
                         <p>Válido por una salida improvisada a donde tú quieras ir.</p>
                     </div>
 
+                     <div class="coupon" onclick="redeemCoupon(this)">
+                        <div class="scissors">✂️</div>
+                        <h3>Compras</h3>
+                        <p>Válido para usar mi tarjeta, mi yape o cualquier cosa para que te compres lo que gustes</p>
+                    </div>
+
                     <div class="coupon" onclick="redeemCoupon(this)">
                         <div class="scissors">✂️</div>
                         <h3>Olvidemos la Pelea</h3>
@@ -734,4 +740,5 @@ Y ahora entiendo todo entiendo por qué coincidimos tantas veces, por qué la vi
         }
     </script>
 </body>
+
 </html>
